[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gqteaMD"
version = "0.2.1"
description = "A modular velocity-Verlet molecular dynamics driver for quantum-chemistry force providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "cclib>=1.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
xtb = [
    "ase>=3.22",
    "xtb>=22.1; python_version < '3.12' and platform_system == 'Linux'",
]

[project.scripts]
gqteaMD = "gqteaMD.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gqteaMD*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
